# FreeMoney

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_top_up_requests.py  0003_top_up_verification_fields.py  0004_top_up_bybit_sender_uid.py  0005_top_up_crypto_chain_verification_fields.py  0006_users_telegram_id_bigint.py  0007_fulfillment_and_payment_refactor.py  0008_order_category_reference.py  0009_crypto_pay_payment_fields.py  0010_admin_catalog_fields.py  0011_offer_catalog_refactor.py  0012_category_legacy_fields_nullable.py  0013_payment_fee_fields.py  0014_bybit_auto_verify_fields.py  0015_products_pool_removed_from_pool.py
app/: __init__.py  cli.py  main.py
app/activation/: __init__.py  client.py
app/bot/: __init__.py  i18n.py  main.py  money.py  router.py  state_utils.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  activity_log.py  category.py  (+10 more)
tests/: test_activation_client_contract.py  test_activation_flow.py  test_admin_and_activation_services.py  test_admin_exports_and_balance.py  test_admin_handler_edge_cases.py  test_blockchain_tx_verification_service.py  test_bot_language_flow.py  test_bot_money_and_state_utils.py  test_bybit_auto_verify.py  test_bybit_client.py  test_catalog_service.py  test_credit_balance_script.py  test_crypto_pay_payments.py  test_fulfillment_purchase_flows.py  test_i18n_emoji_cleanup.py  test_manual_order_admin_notifications.py  test_models_and_services.py  test_offer_catalog_refactor.py  test_order_payment_flow.py  test_orders_bot_ui.py  test_postgresql_compatibility.py  test_products_bot_flow.py  test_seed_demo_data.py  test_sqlite_default_config.py  test_top_up_bot_handlers.py  test_top_up_crypto_pay_flow.py  test_top_up_service.py  test_top_up_verification_service.py  test_transaction_fees.py  test_user_services.py
(+42 files in other folders)
