[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freemoney-backend"
version = "0.1.0"
description = "MVP backend foundation for Telegram shop bot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "aiogram>=3.8.0,<4.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.scripts]
freemoney-api = "app.cli:run_api"
freemoney-bot = "app.cli:run_bot"
freemoney-seed-demo = "app.cli:seed_demo"


[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
