[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webster-shop-backend"
version = "0.1.0"
description = "WEBSTER-SHOP MVP backend for Telegram shop bot and activation website"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "aiogram>=3.8.0,<4.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.scripts]
webster-shop-api = "app.cli:run_api"
webster-shop-bot = "app.cli:run_bot"
webster-shop-seed-demo = "app.cli:seed_demo"
webster-shop-credit-balance = "app.cli:credit_balance"


[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
